<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/total_width_buttons"
    android:layout_height="match_parent">

    <!-- Top View Buttons -->
    <Button
        android:id="@+id/button_subtraction"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_subtraction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_seven"
        app:layout_constraintStart_toEndOf="@id/button_subtraction"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_eight"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_backspace"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_backspace"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Second Row -->
    <Button
        android:id="@+id/button_addition"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_addition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_subtraction" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_four"
        app:layout_constraintStart_toEndOf="@id/button_addition"
        app:layout_constraintTop_toBottomOf="@id/button_seven" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_five"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintTop_toBottomOf="@id/button_eight" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_six"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@id/button_nine" />

    <Button
        android:id="@+id/button_open_parenthesis"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_open"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintTop_toBottomOf="@id/button_backspace" />
    <!-- Third Row -->
    <Button
        android:id="@+id/button_division"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_divide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_addition" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_one"
        app:layout_constraintStart_toEndOf="@id/button_division"
        app:layout_constraintTop_toBottomOf="@id/button_four" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_two"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_five" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_three"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@id/button_six" />

    <Button
        android:id="@+id/button_close_parenthesis"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_close"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintTop_toBottomOf="@id/button_open_parenthesis" />

    <!-- Bottom Row -->
    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_division" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_zero"
        app:layout_constraintStart_toEndOf="@id/button_multiplication"
        app:layout_constraintTop_toBottomOf="@id/button_one" />

    <Button
        android:id="@+id/button_double_zero"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_double_zero"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintTop_toBottomOf="@id/button_two" />

    <Button
        android:id="@+id/button_period"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="."
        app:layout_constraintStart_toEndOf="@id/button_double_zero"
        app:layout_constraintTop_toBottomOf="@id/button_three" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_equals"
        app:layout_constraintStart_toEndOf="@id/button_period"
        app:layout_constraintTop_toBottomOf="@id/button_close_parenthesis" />
</android.support.constraint.ConstraintLayout>